# multi-agent-setup

./: .env.template  .gitignore  AI-team_workflow_documentation  AI_Team_Implementation_Guide.md  PROJECT_SUMMARY.md  README.md  check_story_status.py  debug_github_search.py  debug_projektledare.py  debug_tools.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup-workspace.ps1  test_enhanced_utvecklare.py  test_project_repo_workflow.py  test_real_workflow.py  test_simplified_team.py  workflow_verification.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-approval.yml  feature-request.yml  (+1 more)
Implementation_guidelines/: AI_Team_Implementation_Guide.md  agent_contracts_reference.md
agents/: __init__.py  agents_coordinator.py  kvalitetsgranskare.py  projektledare.py  projektledare_complex.py  qa_testare.py  speldesigner.py  speldesigner_old.py  testutvecklare.py  utvecklare.py  utvecklare.py.backup  utvecklare_old.py
config/: __init__.py  agent_config.py  agent_defaults.py  base_config.py  enviroment.py  settings.py
modules/: __init__.py
multi-agent-setup/: .env.template
scripts/: __init__.py  monitor_github.py  run_tests.py  setup.py  start_ai_team.py  test_complete_github_workflow.py  test_github_issue.py  test_priority_queue.py
tools/: architecture_tools.py  context_tools.py  design_tools.py  dev_tools.py  file_tools.py  file_tools.py.backup  file_utils.py  qa_tools.py  quality_tools.py  tool_base.py
workflows/: __init__.py  agent_coordinator.py  auto_implementation.py  exception_handler.py  priority_que.py  status_handler.py
(+29 files in other folders)
